--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-index.html
+<DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-widh, initial-scale=1.0">
+    <title>Latihan Git = Web II UBSI</title>
+</head>
+<body>
+    <p>Latiham pertama git untuk matakuliah Web II berhasil.</p>
+</body>
+</html>
+    
+
+
+    
